--- a/css/blocks/modal.less
+++ b/css/blocks/modal.less
@@ -5,13 +5,13 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  bottom: 100vh;
+  top: -100vh;
   left: 0;
   z-index: 10;
   background-color: fade(@black, 95%);
   padding: 15px;
   overflow: auto;
-  transition: bottom 0s ease-in-out .2s;
+  transition: top 0s ease-in-out .2s;
 
   &__dialogue {
     width: 100%;
